Fix some z-index order

--- a/app/src/components/lights.component/lights.module.css
+++ b/app/src/components/lights.component/lights.module.css
@@ -14,7 +14,6 @@
     padding: 0rem 1rem;
     gap: 1rem;
     box-shadow: 0rem 1rem 1rem rgba(0, 0, 0, 0.1);
-    z-index: 1;
     overflow: hidden;
 }
 
